# simulation-streaming-test

./: LICENSE  README.md
backend/: pyproject.toml  server.py  start_server.sh
backend/sample_api_client/: ws_client.py  ws_client2.py
backend/simulator/: ideal_gas.py  sph.py  spm.py  wave.py
frontend/streaming-test/: package-lock.json  package.json
frontend/streaming-test/src/: App.tsx
frontend/streaming-test/src/components/scene/: IdealGasScene.tsx  IdealGasSceneRefactor.tsx  SPHScene.tsx  Wave2DScene.tsx
frontend/streaming-test/src/types/: Three.ts
frontend/streaming-test/src/utils/three/: ObjectFactory.ts  OrbitControls.js  SceneManager.ts  VRButton.js
